2011-07-01  Filip Pizlo  <fpizlo@apple.com>

Reviewed by Gavin Barraclough.

        DFG non-speculative JIT always performs slow C calls for div and mod.
        https://bugs.webkit.org/show_bug.cgi?id=63684

        * dfg/DFGNonSpeculativeJIT.cpp:
        (JSC::DFG::NonSpeculativeJIT::compile):

Canonical link: https://commits.webkit.org/79536@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90268 268f45cc-cd09-0410-ab3c-d52691b4dbfc